--- a/README
+++ b/README
@@ -9,3 +9,6 @@ sudo apt install python3-venv
 python3 -m venv .venv
 source .venv/bin/activate
 pip install -r requirements.txt
+
+python download_data.py
+```
